# course-work-object-oriented-programming

./: CMakeLists.txt  README.md
PresetShareQT/: CMakeLists.txt
PresetShareQT/images/: Img.qrc
PresetShareQT/include/: Frontend.h
PresetShareQT/src/: Frontend.cpp  main.cpp
include/: Frontend.h
src/: Frontend.cpp  main.cpp
